--- a/src/html/index.html
+++ b/src/html/index.html
@@ -76,8 +76,8 @@
                 <li><a href="#" data-pop-name="policy" class="btn-popup">개인정보처리방침</a></li>
                 <li><a href="#" data-pop-name="terms" class="btn-popup">홈페이지이용약관</a></li>
                 <li><a href="#" data-pop-name="email" class="btn-popup">이메일무단수집거부</a></li>
-                <li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp">중요정보고시</a></li>
-                <li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp">부가서비스</a></li>
+                <li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp" target="_blank">중요정보고시</a></li>
+                <li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp" target="_blank">부가서비스</a></li>
             </ul>
         </nav>
         <ul class="util">
@@ -238,13 +238,13 @@
                 </header>
                 <ul>
                     <li>
-                        <a href="">
+                        <a href="sub-product.html#eHD90">
                             <h4><em>무빈소 간소한 장례</em><strong>e효담90</strong></h4>
                             <p>자세히보기</p>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="sub-product.html#eHD139">
                             <h4><em>알뜰한 실속 장례</em><strong>e효담139</strong></h4>
                             <p>자세히보기</p>
                         </a>
@@ -405,7 +405,7 @@
                                 <button class="prev" type="button">prev</button>
                                 <button class="next" type="button">next</button>
                             </div>
-                            <button class="btn-more">more</button>
+                            <a class="btn-more" href="/funeral/notice.asp">more</a>
                         </div>
                     </header>
                     <div class="slick-wrapper">
@@ -520,7 +520,7 @@
                                 <button class="prev" type="button">prev</button>
                                 <button class="next" type="button">next</button>
                             </div>
-                            <button class="btn-more">more</button>
+                            <a class="btn-more" href="/review/list.asp">more</a>
                         </div>
                     </header>
                     <div class="slick-container">
@@ -573,8 +573,8 @@
             <li><a href="#" data-pop-name="policy" class="btn-popup">개인정보처리방침</a></li>
             <li><a href="#" data-pop-name="terms" class="btn-popup">홈페이지이용약관</a></li>
             <li><a href="#" data-pop-name="email" class="btn-popup">이메일무단수집거부</a></li>
-            <li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp">중요정보고시</a></li>
-            <li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp">부가서비스</a></li>
+            <li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp" target="_blank">중요정보고시</a></li>
+            <li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp" target="_blank">부가서비스</a></li>
         </ul>
         <div class="footer-address">
             <div class="logo">
