--- a/src/html/sub-review-list.html
+++ b/src/html/sub-review-list.html
@@ -74,8 +74,8 @@
                 <li><a href="#" data-pop-name="policy" class="btn-popup">개인정보처리방침</a></li>
                 <li><a href="#" data-pop-name="terms" class="btn-popup">홈페이지이용약관</a></li>
                 <li><a href="#" data-pop-name="email" class="btn-popup">이메일무단수집거부</a></li>
-                <li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp">중요정보고시</a></li>
-                <li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp">부가서비스</a></li>
+                <li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp" target="_blank">중요정보고시</a></li>
+                <li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp" target="_blank">부가서비스</a></li>
             </ul>
         </nav>
         <ul class="util">
@@ -228,8 +228,8 @@
             <li><a href="#" data-pop-name="policy" class="btn-popup">개인정보처리방침</a></li>
             <li><a href="#" data-pop-name="terms" class="btn-popup">홈페이지이용약관</a></li>
             <li><a href="#" data-pop-name="email" class="btn-popup">이메일무단수집거부</a></li>
-            <li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp">중요정보고시</a></li>
-            <li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp">부가서비스</a></li>
+            <li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp" target="_blank">중요정보고시</a></li>
+            <li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp" target="_blank">부가서비스</a></li>
         </ul>
         <div class="footer-address">
             <div class="logo">
