가입상담폼 상담내용 select 추가

--- a/src/html/sub-product.html
+++ b/src/html/sub-product.html
@@ -598,6 +598,14 @@
                             <option value="">09:00 ~ 10:00</option>
                         </select>
                     </div>
+                    <div>
+                        <label for="fix-u-question">상담내용</label>
+                        <select name="question" id="fix-u-question">
+                            <option value="">선택</option>
+                            <option value="">회사 및 상품문의</option>
+                            <option value="">장례관련문의</option>
+                        </select>
+                    </div>
                     <div class="chk-agree">
                         <div>
                             <input type="checkbox" id="fix-chk-agree" />
