동영상 팝업 추가

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -150,6 +150,12 @@
                     </div>
                 </div>
             </aside>
+            <div class="video-pop-wrap">
+                <div class="pop-con">
+                    <video src="../../assets/video/advertisement.mp4" autoplay controls poster="../../assets/video/thumb.jpg"></video>
+                    <button class="btn-close-pop">닫기</button>
+                </div>
+            </div>
             <div class="visual-slider slick-container">
                 <div class="slick-wrapper">
                     <div class="slick-slide">
