약관내용 수정

--- a/src/html/layer/policy.html
+++ b/src/html/layer/policy.html
@@ -159,8 +159,7 @@
                 5. 회사는 다음과 같은 기관 및 자에게 개인정보를 제공하고 있으며 목적 및 범위는 다음과 같습니다.
                 <ul>
                     <li>
-                        ·개인정보를 제공받는 기관 : A+에셋, A+리얼티, A+손해사정, A+모기지, AAI헬스케어, 마이바운, 한국줄기세포뱅크, 법원, 검찰 등
-                        공공기관, 한국상조공제조합
+                        ·개인정보를 제공받는 기관 : A+라이프 e효담
                     </li>
                     <li>
                         ·개인정보를 제공받는 기관의 개인정보 이용목적 : 상품·서비스 소개 및 판매, 사은·판촉행사 안내, 시장조사, 법령에
