장례수행실적 제목 수정 상담폼 약관보기 -> 자세히 보기 상담폼 개인정보처리방침 동의 문구수정

--- a/src/html/perform12.html
+++ b/src/html/perform12.html
@@ -123,7 +123,7 @@
             <div class="con-body">
                 <article class="board-view">
                     <header class="view-head">
-                        <h3>故이운형님의 장례수행</h3>
+                        <h3>세아그룹 故 이운형 회장 會社葬 수행</h3>
                     </header>
                     <div class="view-body">
                         <div class="center">
@@ -137,11 +137,11 @@
                 <div class="pagination-view">
                     <dl class="prev">
                         <dt>이전글</dt>
-                        <dd><a href="perform11.html">故신명수님의 장례수행</a></dd>
+                        <dd><a href="perform11.html">前 신동방그룹 故 신명수 회장 會社葬 수행</a></dd>
                     </dl>
                     <dl class="next">
                         <dt>다음글</dt>
-                        <dd><a href="perform13.html">故정형식님의 장례수행</a></dd>
+                        <dd><a href="perform13.html">일양약품 故 정형식 명예회장 會社葬 수행</a></dd>
                     </dl>
                 </div>
                 <div class="btn-wrap center">
@@ -206,9 +206,9 @@
                     <div class="chk-agree">
                         <div>
                             <input type="checkbox" id="fix-chk-agree" />
-                            <label for="fix-chk-agree">개인정보처리방침에 동의합니다.</label>
+                            <label for="fix-chk-agree">개인정보 수집 및 사용 동의</label>
                         </div>
-                        <button type="button" data-pop-name="policy" class="btn-popup">약관보기</button>
+                        <button type="button" data-pop-name="policy" class="btn-popup">자세히 보기</button>
                     </div>
                     <button class="btn-red" type="submit">상담신청</button>
                 </form>
