--- a/src/html/perform02.html
+++ b/src/html/perform02.html
@@ -123,7 +123,7 @@
             <div class="con-body">
                 <article class="board-view">
                     <header class="view-head">
-                        <h3>故김덕인님의 장례수행</h3>
+                        <h3>요넥스코리아 故 김덕인 회장 會社葬</h3>
                     </header>
                     <div class="view-body">
                         <div class="center">
@@ -137,11 +137,11 @@
                 <div class="pagination-view">
                     <dl class="prev">
                         <dt>이전글</dt>
-                        <dd><a href="perform01.html">故강영훈의 장례수행</a></dd>
+                        <dd><a href="perform01.html">故 강영훈 前 국무총리 社會葬 수행</a></dd>
                     </dl>
                     <dl class="next">
                         <dt>다음글</dt>
-                        <dd><a href="perform03.html">故김상수님의 장례수행</a></dd>
+                        <dd><a href="perform03.html">대동공업 故 김상수 회장 會社葬 수행</a></dd>
                     </dl>
                 </div>
                 <div class="btn-wrap center">
@@ -206,9 +206,9 @@
                     <div class="chk-agree">
                         <div>
                             <input type="checkbox" id="fix-chk-agree" />
-                            <label for="fix-chk-agree">개인정보처리방침에 동의합니다.</label>
+                            <label for="fix-chk-agree">개인정보 수집 및 사용 동의</label>
                         </div>
-                        <button type="button" data-pop-name="policy" class="btn-popup">약관보기</button>
+                        <button type="button" data-pop-name="policy" class="btn-popup">자세히 보기</button>
                     </div>
                     <button class="btn-red" type="submit">상담신청</button>
                 </form>
