--- a/src/html/perform09.html
+++ b/src/html/perform09.html
@@ -123,7 +123,7 @@
             <div class="con-body">
                 <article class="board-view">
                     <header class="view-head">
-                        <h3>故송인상님의 장례수행</h3>
+                        <h3>한국능률협회 故 송인상 명예회장 協會葬 수행</h3>
                     </header>
                     <div class="view-body">
                         <div class="center">
@@ -137,11 +137,11 @@
                 <div class="pagination-view">
                     <dl class="prev">
                         <dt>이전글</dt>
-                        <dd><a href="perform08.html">故서윤복님의 장례수행</a></dd>
+                        <dd><a href="perform08.html">보스턴마라톤 우승자 故 서윤복 葬禮 수행</a></dd>
                     </dl>
                     <dl class="next">
                         <dt>다음글</dt>
-                        <dd><a href="perform10.html">故신격호님의 장례수행</a></dd>
+                        <dd><a href="perform10.html">故 신격호 롯데그룹 창업주 그룹 葬 수행</a></dd>
                     </dl>
                 </div>
                 <div class="btn-wrap center">
@@ -206,9 +206,9 @@
                     <div class="chk-agree">
                         <div>
                             <input type="checkbox" id="fix-chk-agree" />
-                            <label for="fix-chk-agree">개인정보처리방침에 동의합니다.</label>
+                            <label for="fix-chk-agree">개인정보 수집 및 사용 동의</label>
                         </div>
-                        <button type="button" data-pop-name="policy" class="btn-popup">약관보기</button>
+                        <button type="button" data-pop-name="policy" class="btn-popup">자세히 보기</button>
                     </div>
                     <button class="btn-red" type="submit">상담신청</button>
                 </form>
