--- a/src/html/sub-funeral-info.html
+++ b/src/html/sub-funeral-info.html
@@ -467,9 +467,9 @@
                     <div class="chk-agree">
                         <div>
                             <input type="checkbox" id="fix-chk-agree" />
-                            <label for="fix-chk-agree">개인정보처리방침에 동의합니다.</label>
+                            <label for="fix-chk-agree">개인정보 수집 및 사용 동의</label>
                         </div>
-                        <button type="button" data-pop-name="policy" class="btn-popup">약관보기</button>
+                        <button type="button" data-pop-name="policy" class="btn-popup">자세히 보기</button>
                     </div>
                     <button class="btn-red" type="submit">상담신청</button>
                 </form>
