--- a/src/html/sub-funeral-performance.html
+++ b/src/html/sub-funeral-performance.html
@@ -126,7 +126,7 @@
                         <a href="perform01.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb01.jpg" alt="">
-                                <figcaption>故 강영훈 前 국무총리 社會葬 수행</figcaption>
+                                <figcaption>故 강영훈 前 국무총리<br /> 社會葬 수행</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -134,7 +134,7 @@
                         <a href="perform02.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb02.jpg" alt="">
-                                <figcaption>요넥스코리아 故 김덕인 회장 會社葬</figcaption>
+                                <figcaption>요넥스코리아 故 김덕인 회장<br /> 會社葬 수행</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -142,7 +142,7 @@
                         <a href="perform03.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb03.jpg" alt="">
-                                <figcaption>대동공업 故 김상수 회장 會社葬 수행</figcaption>
+                                <figcaption>대동공업 故 김상수 회장<br /> 會社葬 수행</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -150,7 +150,7 @@
                         <a href="perform04.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb04.jpg" alt="">
-                                <figcaption>故 남덕우 前 국무총리 社會葬 수행</figcaption>
+                                <figcaption>故 남덕우 前 국무총리<br /> 社會葬 수행</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -158,7 +158,7 @@
                         <a href="perform05.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb05.jpg" alt="">
-                                <figcaption>풍문학원 故 민경현 이사장 학교장 수행</figcaption>
+                                <figcaption>풍문학원 故 민경현 이사장<br /> 학교장 수행</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -166,7 +166,7 @@
                         <a href="perform06.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb06.jpg" alt="">
-                                <figcaption>故 민관식 장관 10주기 추모식</figcaption>
+                                <figcaption>故 민관식 장관<br /> 10주기 추모식</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -174,7 +174,7 @@
                         <a href="perform07.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb07.jpg" alt="">
-                                <figcaption>㈜흥해 故 배순태 회장 永訣式 수행</figcaption>
+                                <figcaption>㈜흥해 故 배순태 회장<br /> 永訣式 수행</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -182,7 +182,7 @@
                         <a href="perform08.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb08.jpg" alt="">
-                                <figcaption>보스턴마라톤 우승자 故 서윤복 葬禮 수행</figcaption>
+                                <figcaption>보스턴마라톤 우승자<br /> 故 서윤복 葬禮 수행</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -190,7 +190,7 @@
                         <a href="perform09.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb09.jpg" alt="">
-                                <figcaption>한국능률협회 故 송인상 명예회장 協會葬 수행</figcaption>
+                                <figcaption>한국능률협회 故 송인상<br /> 명예회장 協會葬 수행</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -198,7 +198,7 @@
                         <a href="perform10.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb10.jpg" alt="">
-                                <figcaption>故 신격호 롯데그룹 창업주 그룹 葬 수행</figcaption>
+                                <figcaption>故 신격호 롯데그룹 창업주<br /> 그룹 葬 수행</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -206,7 +206,7 @@
                         <a href="perform11.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb11.jpg" alt="">
-                                <figcaption>前 신동방그룹 故 신명수 회장 會社葬 수행</figcaption>
+                                <figcaption>前 신동방그룹 故 신명수 회장<br /> 會社葬 수행</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -214,7 +214,7 @@
                         <a href="perform12.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb12.jpg" alt="">
-                                <figcaption>세아그룹 故 이운형 회장 會社葬 수행</figcaption>
+                                <figcaption>세아그룹 故 이운형 회장<br /> 會社葬 수행</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -222,7 +222,7 @@
                         <a href="perform13.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb13.jpg" alt="">
-                                <figcaption>일양약품 故 정형식 명예회장 會社葬 수행</figcaption>
+                                <figcaption>일양약품 故 정형식 명예회장<br /> 會社葬 수행</figcaption>
                             </figure>
                         </a>
                     </li>
@@ -230,7 +230,7 @@
                         <a href="perform14.html">
                             <figure>
                                 <img src="../../assets/images/visual/funeral-perform-thumb14.jpg" alt="">
-                                <figcaption>삼정저축은행 창업주 故 한정용 회장 추모식</figcaption>
+                                <figcaption>삼정저축은행 창업주 <br />故 한정용 회장 추모식</figcaption>
                             </figure>
                         </a>
                     </li>
