--- a/src/html/sub-product.html
+++ b/src/html/sub-product.html
@@ -2,18 +2,18 @@
 <html lang="ko">
 
 <head>
-    <title>상품소개|e효담</title>
+    <title>상품안내|e효담</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
-    <meta name="title" content="상품소개|e효담상조,A+라이프">
+    <meta name="title" content="상품안내|e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
     <meta name="description" content="고객님들께 품격있는 서비스를 드리기 위해 준비한 효담상조 상품안내입니다.">
-    <meta property="og:title" content="상품소개|e효담상조,A+라이프">
+    <meta property="og:title" content="상품안내|e효담상조,A+라이프">
     <meta property="og:description" content="고객님들께 품격있는 서비스를 드리기 위해 준비한 효담상조 상품안내입니다.">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
-    <meta name="twitter:title" content="상품소개|e효담상조,A+라이프">
+    <meta name="twitter:title" content="상품안내|e효담상조,A+라이프">
     <meta name="twitter:description" content="고객님들께 품격있는 서비스를 드리기 위해 준비한 효담상조 상품안내입니다.">
     <meta name="twitter:image" content="-">
     <meta name="twitter:card" content="summary_large_image">
