주요고객사 순서조정 이미지변경 상담신청 자세히보기 팝업 수정

--- a/src/html/sub-funeral-info.html
+++ b/src/html/sub-funeral-info.html
@@ -469,7 +469,7 @@
                             <input type="checkbox" id="fix-chk-agree" />
                             <label for="fix-chk-agree">개인정보 수집 및 사용 동의</label>
                         </div>
-                        <button type="button" data-pop-name="policy" class="btn-popup">자세히 보기</button>
+                        <button type="button" data-pop-name="form-policy" class="btn-popup">자세히 보기</button>
                     </div>
                     <button class="btn-red" type="submit">상담신청</button>
                 </form>
