--- a/src/html/sub-customer.html
+++ b/src/html/sub-customer.html
@@ -113,60 +113,60 @@
             </header>
             <div class="con-body">
                 <ul class="company-list">
-                    <li><img src="../../assets/images/logo/01.png" alt="삼성전자"></li>
-                    <li><img src="../../assets/images/logo/02.png" alt="KIA"></li>
-                    <li><img src="../../assets/images/logo/03.png" alt="한국전력공사"></li>
-                    <li><img src="../../assets/images/logo/04.png" alt="롯데백화점"></li>
-                    <li><img src="../../assets/images/logo/05.png" alt="LG디스플레이"></li>
-                    <li><img src="../../assets/images/logo/06.png" alt="MetLife"></li>
-                    <li><img src="../../assets/images/logo/07.png" alt="삼성SDI"></li>
-                    <li><img src="../../assets/images/logo/08.png" alt="POSCO"></li>
-                    <li><img src="../../assets/images/logo/09.png" alt="한국수력자원"></li>
-                    <li><img src="../../assets/images/logo/10.png" alt="LOTTE CHEMICAL"></li>
-                    <li><img src="../../assets/images/logo/11.png" alt="IBK기업은행"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="우리은행"></li>
-                    <li><img src="../../assets/images/logo/13.png" alt="삼성증권"></li>
-                    <li><img src="../../assets/images/logo/31.png" alt="KBS"></li>
-                    <li><img src="../../assets/images/logo/15.png" alt="한국서부발전|주|"></li>
-                    <li><img src="../../assets/images/logo/16.png" alt="대홍기획"></li>
-                    <li><img src="../../assets/images/logo/17.png" alt="한국투자증권"></li>
-                    <li><img src="../../assets/images/logo/18.png" alt="CHUBB"></li>
-                    <li><img src="../../assets/images/logo/19.png" alt="삼성 에스원"></li>
-                    <li><img src="../../assets/images/logo/20.png" alt="한국무역협회"></li>
-                    <li><img src="../../assets/images/logo/21.png" alt="한국남동발전"></li>
-                    <li><img src="../../assets/images/logo/28.png" alt="롯데카드"></li>
-                    <li><img src="../../assets/images/logo/23.png" alt="KEB하나은행"></li>
-                    <li><img src="../../assets/images/logo/24.png" alt="DB생명"></li>
-                    <li><img src="../../assets/images/logo/25.png" alt="NAVER"></li>
-                    <li><img src="../../assets/images/logo/26.png" alt="KRX한국거래소"></li>
-                    <li><img src="../../assets/images/logo/27.png" alt="한국중부발전"></li>
-                    <li><img src="../../assets/images/logo/22.png" alt="롯데손해보험"></li>
-                    <li><img src="../../assets/images/logo/29.png" alt="BCcard"></li>
-                    <li><img src="../../assets/images/logo/30.png" alt="DB손해보험"></li>
-                    <li><img src="../../assets/images/logo/34.png" alt="한화생명"></li>
-                    <li><img src="../../assets/images/logo/55.png" alt="경희대학교총동문회"></li>
-                    <li><img src="../../assets/images/logo/33.png" alt="한국남부발전"></li>
-                    <li><img src="../../assets/images/logo/lotte-himart.png" alt="롯데하이마트"></li>
-                    <li><img src="../../assets/images/logo/35.png" alt="수협"></li>
-                    <li><img src="../../assets/images/logo/36.png" alt="흥국생명"></li>
-                    <li><img src="../../assets/images/logo/40.png" alt="한화손해보험"></li>
-                    <li><img src="../../assets/images/logo/38.png" alt="KOMOSCO 한국조폐공사"></li>
-                    <li><img src="../../assets/images/logo/39.png" alt="한전산업개발"></li>
-                    <li><img src="../../assets/images/logo/37.png" alt="KOREAN AIR"></li>
-                    <li><img src="../../assets/images/logo/41.png" alt="DGB생명"></li>
-                    <li><img src="../../assets/images/logo/42.png" alt="메리츠화재"></li>
-                    <li><img src="../../assets/images/logo/46.png" alt="한화손해사정"></li>
-                    <li><img src="../../assets/images/logo/44.png" alt="대한적십자"></li>
-                    <li><img src="../../assets/images/logo/45.png" alt="한국전력기술"></li>
-                    <li><img src="../../assets/images/logo/43.png" alt="사학연금"></li>
-                    <li><img src="../../assets/images/logo/47.png" alt="대신증권"></li>
-                    <li><img src="../../assets/images/logo/48.png" alt="MG손해보험"></li>
-                    <li><img src="../../assets/images/logo/52.png" alt="한화호텔&리조트"></li>
-                    <li><img src="../../assets/images/logo/50.png" alt="GS건설"></li>
-                    <li><img src="../../assets/images/logo/51.png" alt="한국전력전우회""></li>
-                    <li><img src="../../assets/images/logo/49.png" alt="KMA 한국능률협회""></li>
-                    <li><img src="../../assets/images/logo/53.png" alt="동양생명""></li>
-                    <li><img src="../../assets/images/logo/54.png" alt="ABL""></li>
+                    <li><img src="/images/logo/01.png" alt="삼성전자"></li>
+                    <li><img src="/images/logo/02.png" alt="삼성SDI"></li>
+                    <li><img src="/images/logo/03.png" alt="삼성증권"></li>
+                    <li><img src="/images/logo/04.png" alt="삼성 에스원"></li>
+                    <li><img src="/images/logo/05.png" alt="NAVER""></li>
+                    <li><img src="/images/logo/06.png" alt="한화생명"></li>
+                    <li><img src="/images/logo/07.png" alt="한화손해보험"></li>
+                    <li><img src="/images/logo/08.png" alt="한화손해사정"></li>
+                    <li><img src="/images/logo/09.png" alt="한화호텔&리조트"></li>
+                    <li><img src="/images/logo/10.png" alt="KAI"></li>
+                    <li><img src="/images/logo/11.png" alt="포스코"></li>
+                    <li><img src="/images/logo/12.png" alt="KBS"></li>
+                    <li><img src="/images/logo/13.png" alt="한국무역협회"></li>
+                    <li><img src="/images/logo/14.png" alt="KRX 한국거래소"></li>
+                    <li><img src="/images/logo/15.png" alt="경희대학교총동문회"></li>
+                    <li><img src="/images/logo/16.png" alt="KOMOSCO"></li>
+                    <li><img src="/images/logo/17.png" alt="대한적십자"></li>
+                    <li><img src="/images/logo/18.png" alt="GS건설"></li>
+                    <li><img src="/images/logo/19.png" alt="한국전력공사"></li>
+                    <li><img src="/images/logo/20.png" alt="한국수력원자력"></li>
+                    <li><img src="/images/logo/21.png" alt="한국서부발전"></li>
+                    <li><img src="/images/logo/22.png" alt="한국남동발전"></li>
+                    <li><img src="/images/logo/23.png" alt="한국중부발전"></li>
+                    <li><img src="/images/logo/24.png" alt="한국남부발전"></li>
+                    <li><img src="/images/logo/25.png" alt="한전사업개발주식회사"></li>
+                    <li><img src="/images/logo/26.png" alt="한국전력기술"></li>
+                    <li><img src="/images/logo/27.png" alt="한국전력전우회"></li>
+                    <li><img src="/images/logo/28.png" alt="롯데백화점"></li>
+                    <li><img src="/images/logo/29.png" alt="LOTTE CHEMICAL""></li>
+                    <li><img src="/images/logo/30.png" alt="대홍기획"></li>
+                    <li><img src="/images/logo/31.png" alt="LOTTECARD"></li>
+                    <li><img src="/images/logo/32.png" alt="롯데손해보험"></li>
+                    <li><img src="/images/logo/33.png" alt="LOTTE HIMART"></li>
+                    <li><img src="/images/logo/34.png" alt="KOREAN AIR"></li>
+                    <li><img src="/images/logo/35.png" alt="사학연금"></li>
+                    <li><img src="/images/logo/36.png" alt="KMA 한국능률협회"></li>
+                    <li><img src="/images/logo/37.png" alt="LG디스플레이"></li>
+                    <li><img src="/images/logo/38.png" alt="IBK 기업은행"></li>
+                    <li><img src="/images/logo/39.png" alt="한국투자증권"></li>
+                    <li><img src="/images/logo/40.png" alt="KEB 하나은행"></li>
+                    <li><img src="/images/logo/41.png" alt="BCcard""></li>
+                    <li><img src="/images/logo/42.png" alt="수협"></li>
+                    <li><img src="/images/logo/43.png" alt="DGB생명"></li>
+                    <li><img src="/images/logo/44.png" alt="대신증권"></li>
+                    <li><img src="/images/logo/45.png" alt="수호천사동양생명"></li>
+                    <li><img src="/images/logo/46.png" alt="MetLife"></li>
+                    <li><img src="/images/logo/47.png" alt="우리은행"></li>
+                    <li><img src="/images/logo/48.png" alt="CHUBB"></li>
+                    <li><img src="/images/logo/49.png" alt="DB생명"></li>
+                    <li><img src="/images/logo/50.png" alt="DB손해보험"></li>
+                    <li><img src="/images/logo/51.png" alt="흥국생명"></li>
+                    <li><img src="/images/logo/52.png" alt="메리츠화재"></li>
+                    <li><img src="/images/logo/53.png" alt="MG손해보험"></li>
+                    <li><img src="/images/logo/54.png" alt="ABL""></li>
                 </ul>
             </div>
         </article>
@@ -229,7 +229,7 @@
                             <input type="checkbox" id="fix-chk-agree" />
                             <label for="fix-chk-agree">개인정보 수집 및 사용 동의</label>
                         </div>
-                        <button type="button" data-pop-name="policy" class="btn-popup">자세히 보기</button>
+                        <button type="button" data-pop-name="form-policy" class="btn-popup">자세히 보기</button>
                     </div>
                     <button class="btn-red" type="submit">상담신청</button>
                 </form>
