--- a/funeral/search.html
+++ b/funeral/search.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>장사시설검색|장례정보|e효담</title>
+    <base href="/hyodam">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
@@ -91,7 +92,7 @@
             </ul>
         </nav>
         <ul class="util">
-            <li><a class="call-link" href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
+            <li><a class="call-link" href="tel:1688-8890"><em>장례접수</em><strong>1688-8890</strong>(전국긴급출동24시간)</a></li>
             <li><a class="info-link" target="_blank" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
         </ul>
     </header>
@@ -776,15 +777,16 @@
 						<option value="13:00 ~ 14:00">13:00 ~ 14:00</option>
 						<option value="14:00 ~ 15:00">14:00 ~ 15:00</option>
 						<option value="15:00 ~ 16:00">15:00 ~ 16:00</option>
-						<option value="16:00 ~ 17:00">16:00 ~ 17:00</option>
+                        <option value="16:00 ~ 17:00">16:00 ~ 17:00</option>
+                        <option value="17:00 ~ 18:00">17:00 ~ 18:00</option>
 					</select>
                     </div>
                     <div>
                         <label for="fix-u-question">상담내용</label>
                         <select name="question" id="fix-u-question">
                             <option value="">선택</option>
-                            <option value="회사 및 상품문의">회사 및 상품문의</option>
                             <option value="장례관련문의">장례관련문의</option>
+                            <option value="회사 및 상품문의">회사 및 상품문의</option>
                         </select>
                     </div>
                     <div class="chk-agree">
