--- a/introduce/history.html
+++ b/introduce/history.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>연혁|회사소개|e효담</title>
+    <base href="/hyodam">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
@@ -92,7 +93,7 @@
             </ul>
         </nav>
         <ul class="util">
-            <li><a class="call-link" href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
+            <li><a class="call-link" href="tel:1688-8890"><em>장례접수</em><strong>1688-8890</strong>(전국긴급출동24시간)</a></li>
             <li><a class="info-link" target="_blank" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
         </ul>
     </header>
@@ -167,6 +168,7 @@
                                 <li><em>12월</em> <span>2019 KCAI 한국소비자평가 1위 <br />- 고객만족브랜드(상조서비스) 부문 1위</span></li>
                                 <li><em>02월</em> <span>창립 10주년</span></li>
                                 <li><em>01월</em> <span>故 김만제 前 부총리 (포스코 前 회장) 團體葬 수행</span></li>
+                                <li><em>01월</em> <span>삼성전자 장례서비스 위탁회사 선정</span></li>
                             </ul>
                         </li>
                         <li class="right">
@@ -182,6 +184,7 @@
                                 <li><em>08월</em> <span>롯데건설 장례서비스 위탁회사 선정</span></li>
                                 <li><em>04월</em> <span>삼성SDI 장례서비스 위탁회사 선정</span></li>
                                 <li><em>01월</em> <span>동양생명 장례서비스 위탁회사 선정</span></li>
+                                <li><em>01월</em> <span>LG디스플레이 장례서비스 위탁회사 선정</span></li>
                             </ul>
                         </li>
                         <li class="left line">
@@ -337,15 +340,16 @@
 						<option value="13:00 ~ 14:00">13:00 ~ 14:00</option>
 						<option value="14:00 ~ 15:00">14:00 ~ 15:00</option>
 						<option value="15:00 ~ 16:00">15:00 ~ 16:00</option>
-						<option value="16:00 ~ 17:00">16:00 ~ 17:00</option>
+                        <option value="16:00 ~ 17:00">16:00 ~ 17:00</option>
+                        <option value="17:00 ~ 18:00">17:00 ~ 18:00</option>
 					</select>
                     </div>
                     <div>
                         <label for="fix-u-question">상담내용</label>
                         <select name="question" id="fix-u-question">
                             <option value="">선택</option>
-                            <option value="회사 및 상품문의">회사 및 상품문의</option>
                             <option value="장례관련문의">장례관련문의</option>
+                            <option value="회사 및 상품문의">회사 및 상품문의</option>
                         </select>
                     </div>
                     <div class="chk-agree">
