--- a/introduce/greetings.html
+++ b/introduce/greetings.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>인사말|회사소개|e효담</title>
+    <base href="/hyodam">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
@@ -93,7 +94,7 @@
             </ul>
         </nav>
         <ul class="util">
-            <li><a class="call-link" href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
+            <li><a class="call-link" href="tel:1688-8890"><em>장례접수</em><strong>1688-8890</strong>(전국긴급출동24시간)</a></li>
             <li><a class="info-link" target="_blank" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
         </ul>
     </header>
@@ -158,7 +159,7 @@
                         <p>
                             그래서 금번에 A+라이프 효담에서는<br />
                             잘못된 장례문화를 바로 잡고, 불필요한 허례허식을 줄이는 목적으로<br />
-                            <strong>후불식 온라인 상조인 'e효담'을 런칭 하였습니다.</strong>
+                            <strong>후불식 온라인 상조인 <img src="/images/logo/logo-b-hyodam79x42.png" alt="e효담" />을 런칭 하였습니다.</strong>
                         </p>
                     </div>
                 </div>
@@ -175,7 +176,7 @@
                     진행 하면서 많은 고객들에게 최고의 만족도를 제공하고 있습니다.
                 </p>
                 <p class="last-txt-box">
-                    <em>A+라이프 효담의 후불식 온라인 상조인 'e효담' 의 장례서비스를 이용하신다면</em><br />
+                    <em>A+라이프 효담의 후불식 온라인 상조인 <img src="/images/logo/logo-b-hyodam79x42.png" alt="e효담" /> 의 장례서비스를 이용하신다면</em><br />
                     저렴한 가격과 좋은 품질로 임직원 모두가 열과 성을 다하여 유가족의 슬픔을 진심으로 위로 해드리고<br />
                     고인이 걸어오신 숭고하고 고귀한 삶을 매듭지어야 함에 있어서,<br />
                     한치의 소홀함도 없이 효와 정성을 담아 최선을 다할 것을 약속드립니다.
@@ -236,15 +237,16 @@
 						<option value="13:00 ~ 14:00">13:00 ~ 14:00</option>
 						<option value="14:00 ~ 15:00">14:00 ~ 15:00</option>
 						<option value="15:00 ~ 16:00">15:00 ~ 16:00</option>
-						<option value="16:00 ~ 17:00">16:00 ~ 17:00</option>
+                        <option value="16:00 ~ 17:00">16:00 ~ 17:00</option>
+                        <option value="17:00 ~ 18:00">17:00 ~ 18:00</option>
 					</select>
                     </div>
                     <div>
                         <label for="fix-u-question">상담내용</label>
                         <select name="question" id="fix-u-question">
                             <option value="">선택</option>
-                            <option value="회사 및 상품문의">회사 및 상품문의</option>
                             <option value="장례관련문의">장례관련문의</option>
+                            <option value="회사 및 상품문의">회사 및 상품문의</option>
                         </select>
                     </div>
                     <div class="chk-agree">
